# Infinix-ClawAnalytics

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
api/: __init__.py  main.py
claw_analytics/: __init__.py  artifacts.py  cli.py  cluster.py  features.py  ingest.py  model.py  synthetic_data.py
claw_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dashboard/: __init__.py  app.py
infinix_clawanalytics/: __init__.py  dashboard.py  enterprise.py  logger.py  main.py  metrics.py  monitor.py
infinix_clawanalytics/analyzer/: __init__.py  api.py  clustering.py  config.py  dashboard_app.py  data_generator.py  data_sources.py  features.py  modeling.py  pipeline.py
templates/: convocados alemania.yaml  revision.yaml
tests/: test_api.py  test_cluster.py  test_features.py  test_ingest.py  test_model.py  test_synthetic_data.py
