[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-analytics"
version = "0.1.0"
description = "Open-source commercial analytics platform with Streamlit dashboard and FastAPI scoring API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.33",
    "plotly>=5.20",
    "sqlalchemy>=2.0",
    "requests>=2.31",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
mysql = ["pymysql>=1.1"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[project.scripts]
claw = "claw_analytics.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claw_analytics*", "api*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
